2010-11-04  Gabor Rapcsanyi  <rgabor@inf.u-szeged.hu>

        Reviewed by Eric Seidel.

        [NRWT] Clear invalid http locks on Windows platform as well
        https://bugs.webkit.org/show_bug.cgi?id=48515

        * Scripts/webkitpy/common/system/executive.py:
        * Scripts/webkitpy/common/system/executive_unittest.py:
        * Scripts/webkitpy/layout_tests/port/http_lock.py:

2010-11-02  Adam Roben  <aroben@apple.com>

        Reduce our dependence on coreutils when running Python tests

        This patch introduces versions of the standard echo and cat utilities
        implemented in Python. They are probably missing features of their
        coreutils equivalents, but they can do what's necessary for our Python
        tests. This is useful on Windows, where these utilities typically
        aren't available.

        Fixes <http://webkit.org/b/48883> executive_unittest relies on echo
        and cat utilities from coreutils, which are not present on Windows

        Reviewed by Eric Seidel.

        * Scripts/webkitpy/common/system/executive_unittest.py: Changed to use
        our Python-based echo and cat.

        * Scripts/webkitpy/common/system/fileutils.py: Added.
        (make_stdout_binary): On Windows, puts sys.stdout into binary mode so
        that \n won't be translated into \r\n. I couldn't think of a good way
        to test this directly without touching the filesystem, but it is tested
        indirectly by echo_unittest.

        * Scripts/webkitpy/test/cat.py: Added.
        (command_arguments): Returns a list for invoking cat with the given arguments.
        (main): Acts like a simplified version of the coreutils cat utility.

        * Scripts/webkitpy/test/cat_unittest.py: Added.
        (CatTest.assert_cat): Runs cat with the given input and ensures the
        output matches the input.
        (CatTest.test_basic): Performs a simple test of cat.
        (CatTest.test_no_newline): Tests what happens when the input string